# slime

./: CHANGELOG.md  Cargo.toml  README.md  init_slime.sh
deploy_scripts/: README.md  deploy_template.sh  travis_template.yml
examples/simple_page/: Cargo.toml
examples/simple_page/data/: data1.json  data2.toml  index.json
examples/simple_page/src/: main.rs
examples/simple_page/templates/: index.hbs
src/: data.rs  generate.rs  html.rs  lib.rs  template.rs
