[package]
authors = ["Jaroslaw Weber<jaroslaw.weber@gmail.com>"]
name = "slime"
version = "0.3.0"
description = "handlebars base simple and flexible static page generator library"
license = "MIT"

[dependencies]
handlebars = "0.30.1"
serde_json = "1.0.9"
toml = "0.4.5"
fs_extra = "1.1.0"
serde = "1.0.27"
