[package]
authors = ["Jaroslaw Weber<jaroslaw.weber@gmail.com>"]
name = "slime"
version = "0.4.1"
description = "handlebars and toml based simple and flexible static page/code generator library"
license = "MIT"

[dependencies]
handlebars = "1.0.0-beta.1"
serde_json = "1.0.9"
toml = "0.4.5"
fs_extra = "1.1.0"
serde = "1.0.27"
failure = "0.1.1"
